crates/inertia-macros/tests/ui/fail/inertia_type_union.rs
use ia::InertiaType;

#[derive(InertiaType)]
union Unsupported {
    value: u32,
}

fn main() {}
