crates/inertia-macros/tests/ui/fail/inertia_type_union.stderr
error: InertiaType does not support unions
 --> tests/ui/fail/inertia_type_union.rs:4:1
  |
4 | union Unsupported {
  | ^^^^^
